--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <!-- <model-viewer> HTML element -->
-    <model-viewer src="Astronaut.glb" ar ar-placement="wall" camera-controls touch-action="pan-y" alt="A 3D model of some wall art">
+    <model-viewer src="Window.glb" ar ar-placement="wall" camera-controls touch-action="pan-y" alt="A 3D model of some wall art">
       <div class="progress-bar hide" slot="progress-bar">
           <div class="update-bar"></div>
       </div>
