--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <!-- <model-viewer> HTML element -->
-    <model-viewer src="Window.glb" ar ar-placement="wall" camera-controls touch-action="pan-y" alt="A 3D model of some wall art">
+    <model-viewer src="BrainStem.glb" ar ar-modes="webxr scene-viewer quick-look"
+     camera-controls tone-mapping="commerce" poster="poster.webp" shadow-intensity="1" >
       <div class="progress-bar hide" slot="progress-bar">
           <div class="update-bar"></div>
       </div>
