--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <!-- <model-viewer> HTML element -->
-    <model-viewer src="RobotExpressive.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls tone-mapping="commerce" poster="poster.webp" shadow-intensity="1" autoplay>
+    <model-viewer id="test" src="RobotExpressive.glb" ar ar-modes="webxr scene-viewer quick-look"
+     camera-controls tone-mapping="commerce" poster="poster.webp" shadow-intensity="1" >
       <div class="progress-bar hide" slot="progress-bar">
           <div class="update-bar"></div>
       </div>
@@ -21,6 +22,18 @@
       </div>
     </model-viewer>  
     <script src="script.js"></script>
+
+    <script>
+      (() => {
+        const modelViewer = document.querySelector('#test');
+      
+        self.setInterval(() => {
+          modelViewer.animationName ='Wave' ;
+         
+        }, 1500.0);
+      })();
+    </script>
+
     <!-- Loads <model-viewer> for browsers: -->
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.2.0/model-viewer.min.js"></script>
   </body>
