--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         const modelViewer = document.querySelector('#test');
       
         self.setInterval(() => {
+          modelViewer.pause();
           modelViewer.animationName =id ;
           modelViewer.play();
          
