--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       
         self.setInterval(() => {
           modelViewer.pause();
+          modelViewer.currentTime = 0;
           modelViewer.animationName =id ;
           modelViewer.play();
          
