--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </model-viewer>  
     <script src="script.js"></script>
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.2.0/model-viewer.min.js"></script>
-    <script type="text/javascript">
+  <!--  <script type="text/javascript">
       function image(id) {
         (() => {
         const modelViewer = document.querySelector('#test');
@@ -42,7 +42,7 @@
       })();
       }
       </script>
-    
+    -->
 
     <!-- Loads <model-viewer> for browsers: -->
     
