--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </model-viewer>  
     <script src="script.js"></script>
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.2.0/model-viewer.min.js"></script>
-  <!--  <script type="text/javascript">
+   <script type="text/javascript">
       function image(id) {
         (() => {
         const modelViewer = document.querySelector('#test');
@@ -43,7 +43,7 @@
       })();
       }
       </script>
-    -->
+    
 
     <!-- Loads <model-viewer> for browsers: -->
     
